feat(user) add users/me endpoints
