# public/apidoc/swagger.json
@@ -1021,6 +1021,42 @@
                 ]
             }
         },
+        "/me": {
+            "get": {
+                "tags": [
+                    "App user"
+                ],
+                "summary": "authenticated user's datas",
+                "description": "Get the authenticated user's data",
+                "operationId": "a1f5836cf1aed4fd0f9c45f2a5b5ffaf",
+                "responses": {
+                    "200": {
+                        "description": "Get user",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "content": {
+                                            "$ref": "#/components/schemas/appUser"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "scalar": "JWT"
+                    }
+                ]
+            }
+        },
         "/register": {
             "post": {
                 "tags": [
